Fix scrollbar issue

--- a/src/styles/Grid.module.css
+++ b/src/styles/Grid.module.css
@@ -9,7 +9,7 @@
   align-content: start;
   gap: 10px;
   text-align: center;
-  padding: 10px;
+  padding: 15px;
   transition: transform 0.5s ease;
 }
 
